Improve error handling and refactor to use new names/paths from IDL  (#43)