@@ -8,6 +8,7 @@ import io.github.cadenceoss.iwf.gen.api.DefaultApi;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class Client {
     private final Registry registry;
@@ -42,7 +43,7 @@ public class Client {
         final String wfType = workflowClass.getSimpleName();
         final StateDef stateDef = registry.getWorkflowState(wfType, startStateId);
         if (stateDef == null || !stateDef.getCanStartWorkflow()) {
-            throw new RuntimeException("invalid start stateId " + startStateId);
+            throw new IllegalArgumentException("invalid start stateId " + startStateId);
         }
 
         WorkflowStartResponse workflowStartResponse = defaultApi.apiV1WorkflowStartPost(new WorkflowStartRequest()
@@ -64,11 +65,11 @@ public class Client {
      * @return
      * @param <T> type of the output
      */
-    public <T> T GetSimpleWorkflowResultWithLongWait(
+    public <T> T GetSimpleWorkflowResultWithWait(
             Class<T> valueClass,
             final String workflowId,
             final String workflowRunId) {
-        WorkflowGetResponse workflowGetResponse = defaultApi.apiV1WorkflowGetWithLongWaitPost(
+        WorkflowGetResponse workflowGetResponse = defaultApi.apiV1WorkflowGetWithWaitPost(
                 new WorkflowGetRequest()
                         .needsResults(true)
                         .workflowId(workflowId)
@@ -79,17 +80,15 @@ public class Client {
         Preconditions.checkNotNull(workflowGetResponse.getResults(), checkErrorMessage);
         Preconditions.checkArgument(workflowGetResponse.getResults().size() == 1, checkErrorMessage);
         Preconditions.checkNotNull(workflowGetResponse.getResults().get(0).getCompletedStateOutput(), checkErrorMessage);
-
-        //TODO validate encoding type
-
+        
         final StateCompletionOutput output = workflowGetResponse.getResults().get(0);
         return objectEncoder.decode(output.getCompletedStateOutput(), valueClass);
     }
 
-    public <T> T GetSimpleWorkflowResultWithLongWait(
+    public <T> T GetSimpleWorkflowResultWithWait(
             Class<T> valueClass,
             final String workflowId) {
-        return GetSimpleWorkflowResultWithLongWait(valueClass, workflowId, "");
+        return GetSimpleWorkflowResultWithWait(valueClass, workflowId, "");
     }
 
     /**
@@ -98,9 +97,9 @@ public class Client {
      * @param workflowRunId
      * @return a list of the state output for completion states. User code will figure how to use ObjectEncoder to decode the output
      */
-    public List<StateCompletionOutput> GetComplexWorkflowResultWithLongWait(
+    public List<StateCompletionOutput> GetComplexWorkflowResultWithWait(
             final String workflowId, final String workflowRunId) {
-        WorkflowGetResponse workflowGetResponse = defaultApi.apiV1WorkflowGetWithLongWaitPost(
+        WorkflowGetResponse workflowGetResponse = defaultApi.apiV1WorkflowGetWithWaitPost(
                 new WorkflowGetRequest()
                         .needsResults(true)
                         .workflowId(workflowId)
@@ -110,8 +109,8 @@ public class Client {
         return workflowGetResponse.getResults();
     }
 
-    public List<StateCompletionOutput> GetComplexWorkflowResultWithLongWait(final String workflowId) {
-        return GetComplexWorkflowResultWithLongWait(workflowId, "");
+    public List<StateCompletionOutput> GetComplexWorkflowResultWithWait(final String workflowId) {
+        return GetComplexWorkflowResultWithWait(workflowId, "");
     }
     public void SignalWorkflow(
             final Class<? extends Workflow> workflowClass,
@@ -120,17 +119,20 @@ public class Client {
             final String signalChannelName,
             final Object signalValue) {
         final String wfType = workflowClass.getSimpleName();
-        if (registry.getSignalChannelNameToSignalTypeMap(wfType) == null) {
-            throw new RuntimeException(String.format("Workflow %s doesn't have any registered signal channels", wfType));
-        }
 
         Map<String, Class<?>> nameToTypeMap = registry.getSignalChannelNameToSignalTypeMap(wfType);
+        if (nameToTypeMap == null) {
+            throw new IllegalArgumentException(
+                    String.format("Workflow %s is not registered", wfType)
+            );
+        }
+
         if (!nameToTypeMap.containsKey(signalChannelName)) {
-            throw new RuntimeException(String.format("Workflow %s doesn't have signal %s", wfType, signalChannelName));
+            throw new IllegalArgumentException(String.format("Workflow %s doesn't have signal %s", wfType, signalChannelName));
         }
         Class<?> signalType = nameToTypeMap.get(signalChannelName);
         if (!signalType.isInstance(signalValue)) {
-            throw new RuntimeException(String.format("Signal value is not of type %s", signalType.getName()));
+            throw new IllegalArgumentException(String.format("Signal value is not of type %s", signalType.getName()));
         }
 
         defaultApi.apiV1WorkflowSignalPost(new WorkflowSignalRequest()
@@ -178,31 +180,38 @@ public class Client {
         return resp.getWorkflowRunId();
     }
 
-    public Map<String, Object> queryWorkflow(
+    public Map<String, Object> getWorkflowQueryAttributes(
+            final Class<? extends Workflow> workflowClass,
+            final String workflowId,
+            final String workflowRunId,
+            List<String> attributeKeys) {
+        if (attributeKeys == null || attributeKeys.isEmpty()) {
+            throw new IllegalArgumentException("attributeKeys must contain at least one entry, or use getAllQueryAttributes API to get all");
+        }
+        return doGetWorkflowQueryAttributes(workflowClass, workflowId, workflowRunId, attributeKeys);
+    }
+
+    private Map<String, Object> doGetWorkflowQueryAttributes(
             final Class<? extends Workflow> workflowClass,
             final String workflowId,
             final String workflowRunId,
             List<String> attributeKeys) {
         final String wfType = workflowClass.getSimpleName();
-        if (registry.getWorkflow(wfType) == null) {
-            throw new RuntimeException(
+
+        Map<String, Class<?>> queryAttributeKeyToTypeMap = registry.getQueryAttributeKeyToTypeMap(wfType);
+        if (queryAttributeKeyToTypeMap == null) {
+            throw new IllegalArgumentException(
                     String.format("Workflow %s is not registered", wfType)
             );
         }
-        if (registry.getQueryAttributeKeyToTypeMap(wfType) == null) {
-            throw new RuntimeException(
-                    String.format("Workflow %s doesn't have any registered query attribute", wfType)
-            );
-        }
 
-        Map<String, Class<?>> queryAttributeKeyToTypeMap = registry.getQueryAttributeKeyToTypeMap(wfType);
         // if attribute keys is null or empty, iwf server will return all query attributes
         if (attributeKeys != null && !attributeKeys.isEmpty()) {
             List<String> nonExistingQueryAttributeList = attributeKeys.stream()
                     .filter(s -> !queryAttributeKeyToTypeMap.containsKey(s))
-                    .toList();
+                    .collect(Collectors.toList());
             if (!nonExistingQueryAttributeList.isEmpty()) {
-                throw new RuntimeException(
+                throw new IllegalArgumentException(
                         String.format(
                                 "Query attributes not registered: %s",
                                 String.join(", ", nonExistingQueryAttributeList)
@@ -211,15 +220,15 @@ public class Client {
             }
         }
 
-        WorkflowQueryResponse response = defaultApi.apiV1WorkflowQueryPost(
-                new WorkflowQueryRequest()
+        WorkflowGetQueryAttributesResponse response = defaultApi.apiV1WorkflowQueryattributesGetPost(
+                new WorkflowGetQueryAttributesRequest()
                         .workflowId(workflowId)
                         .workflowRunId(workflowRunId)
                         .attributeKeys(attributeKeys)
         );
 
         if (response.getQueryAttributes() == null) {
-            throw new RuntimeException("query attributes not returned");
+            throw new InternalServiceException("query attributes not returned");
         }
         Map<String, Object> result = new HashMap<>();
         for (KeyValue keyValue: response.getQueryAttributes()) {
@@ -233,10 +242,10 @@ public class Client {
         return result;
     }
 
-    public Map<String, Object> queryAllQueryAttributes(
+    public Map<String, Object> getAllQueryAttributes(
             final Class<? extends Workflow> workflowClass,
             final String workflowId,
             final String workflowRunId) {
-        return queryWorkflow(workflowClass, workflowId, workflowRunId, null);
+        return doGetWorkflowQueryAttributes(workflowClass, workflowId, workflowRunId, null);
     }
 }
